--- a/index.html
+++ b/index.html
@@ -1,99 +1,154 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Progate</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
-  <link rel="stylesheet" type="text/css" href="responsive.css">
-  <link rel="shortcut icon" href="favicon.ico" >
-  <!--     ┬ ┬┌─┐  ┌─┐┬─┐┌─┐        -->
-  <!--     │││├┤   ├─┤├┬┘├┤         -->
-  <!--     └┴┘└─┘  ┴ ┴┴└─└─┘        -->
-  <!--     ╔═╗╦═╗╔═╗╔═╗╔═╗╔╦╗╔═╗    -->
-  <!--     ╠═╝╠╦╝║ ║║ ╦╠═╣ ║ ║╣     -->
-  <!--     ╩  ╩╚═╚═╝╚═╝╩ ╩ ╩ ╚═╝    -->
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="./img/Free_Sample_By_Wix.jpg" type="image/jpg">
+    <title>Oluwaseyi</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+
+    <!--HEADER TAG-->
     <header>
-      <div class="container">
-        <div class="header-left">
-          <img class="logo" src="https://prog-8.com/images/html/advanced/main_logo.png">
-        </div>
-        <span class="fa fa-bars menu-icon"></span>
-        <div class="header-right">
-          <a href="#">Lessons</a>
-          <a href="#">Sign in</a>
-          <a href="#" class="login">Log in</a>
-        </div>
+      <div class="my-logo">
+        <a href="/Portfolio_Design/"
+          ><img
+            src="./img/Free_Sample_By_Wix.jpg"
+            alt="This is my personal logo"
+        /></a>
+      </div>
+      <div class="header-menu">
+        <input class="menu-btn" type="checkbox" id="menu-btn" />
+        <label class="menu-icon" for="menu-btn"
+          ><span class="nav-icon"></span
+        ></label>
+        <ul class="menu">
+          <li><a href="/Portfolio_Design/" style="color: #f5f5f5;">About Me</a></li>
+          <li><a href="/Portfolio_Design/pages/resume.html">Resume</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
       </div>
     </header>
-    <div class="top-wrapper">
-      <div class="container">
-        <h1>LEARN TO CODE.</h1>
-        <h1>LEARN TO BE CREATIVE.</h1>
-        <p>Progate is an online learning service for programming.</p>
-        <p>We offer you a fully equipped coding environment to get you started.</p>
-        <div class="btn-wrapper">
-          <a href="#" class="btn signup">Sign up with Email</a>
-          <p>or</p>
-          <a href="#" class="btn facebook"><span class="fa fa-facebook"></span>Sign up with Facebook</a>
-          <a href="#" class="btn twitter"><span class="fa fa-twitter"></span>Sign up with Twitter</a>
+
+    <!--MAIN TAG-->
+    <main>
+      <div class="main-top">
+        <div class="main-left">
+          <img
+            src="./img/IMG_20181226_165359_433.jpg"
+            alt="My personal image"
+          />
+        </div>
+        <div class="main-right">
+          <h4>Frontend Developer</h4>
+          <h1>Oluwaseyi Awotunde</h1>
+          <p>
+            Welcome to my portfolio Website. Most of my works can be previewed
+            here but you can also see them on GitHub. This site was built with
+            purely HTML and SASS. Enjoy!
+          </p>
+          <a href="/Portfolio_Design/pages/resume.html"><button class="resume-button">My Resume</button></a>
+          <button class="contact-button">Contact</button>
         </div>
       </div>
-    </div>
-    <div class="lesson-wrapper">
-      <div class="container">
-        <div class="heading">
-          <h2>Learn Where to Get Started!</h2>
+
+      <div class="main-title">
+        <h2>What I Do</h2>
+      </div>
+
+      <div class="main-container">
+        <div class="card card-1">
+          <div class="card-image">
+            <img
+              src="./img/icons/icons8-google-code-24.png"
+              alt="web development"
+            />
+          </div>
+          <div class="card-info">
+            <h4>
+              Web Development
+            </h4>
+            <p>
+              I am proficient in HTML, CSS, SASS. I am currently learning
+              JavaScript and will modify this portfolio once I have done that. I
+              can code a little bit of React and Ruby on Rails. I am a
+              full-fledged Frontend Developer.
+            </p>
+          </div>
         </div>
-        <div class="lessons">
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/html.png">
-              <p>HTML & CSS</p>
-            </div>
-            <p class="text-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
+
+        <div class="card card-2">
+          <div class="card-image">
+            <img
+              src="./img/icons/icons8-test-passed-24.png"
+              alt="software testing"
+            />
           </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/jQuery.png">
-              <p>jQuery</p>
-            </div>
-            <p class="text-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
+          <div class="card-info">
+            <h4>
+              Software Testing
+            </h4>
+            <p>
+              I am good at testing React frontend code using Cypress. I can also
+              test APIs using Postman. I document errors and shortcomings for
+              reviewing by other developers.
+            </p>
           </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/ruby.png">
-              <p>Ruby</p>
-            </div>
-            <p class="text-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used around the world to build web applications.</p>
+        </div>
+
+        <div class="break"></div>
+
+        <div class="card card-4">
+          <div class="card-image">
+            <img
+              src="./img/icons/icons8-product-management-24.png"
+              alt="project management"
+            />
           </div>
-          <div class="lesson">
-            <div class="lesson-icon">
-              <img src="https://prog-8.com/images/html/advanced/php.png">
-              <p>PHP</p>
-            </div>
-            <p class="text-contents">An open source scripting language that can be embedded into HTML, and well suited for web development.</p>
+          <div class="card-info">
+            <h4>Project Management</h4>
+            <p>
+              I am good at managing projects. I can work well with project
+              management tools like: Trello and TeamGantt. I work well with
+              deadlines and know how to motivate team members to work.
+            </p>
           </div>
-          <div class="clear"></div>
         </div>
       </div>
-    </div>
-    <div class="message-wrapper">
-      <div class="container">
-        <div class="heading">
-          <h2>Ready to become an awesome programmer?</h2>
-          <h3>Let's learn to code, learn to be creative!</h3>
-        </div>
-        <span class="btn message">Start Learning</span>
-      </div>
-    </div>
+    </main>
+
+    <!--FOOTER TAG-->
     <footer>
-      <div class="container">
-        <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-        <p>Learn to code, learn to be creative.</p>
+      <div class="social-media-icons">
+        <a href="https://www.facebook.com/awotunde.seyi.9/"
+          ><img
+            src="./img/icons/icons8-facebook-old-24.png"
+            alt="facebook icon"
+        /></a>
+        <a href="https://www.instagram.com/sheyi_a/"
+          ><img src="./img/icons/icons8-instagram-24.png" alt="instagram icon"
+        /></a>
+        <a href="https://twitter.com/SeyiJuliana"
+          ><img
+            src="./img/icons/icons8-twitter-squared-24.png"
+            alt="twitter icon"
+        /></a>
+        <a href="https://github.com/Shey1j"
+          ><img src="./img/icons/icons8-github-24.png" alt="github icon"
+        /></a>
+        <a href="https://www.linkedin.com/in/oluwaseyi-awotunde-ba5690149/"
+          ><img src="./img/icons/icons8-linkedin-24.png" alt="linkedin icon"
+        /></a>
+      </div>
+      <div class="copyright">
+        <p>&copy;2020. Oluwaseyi Awotunde</p>
       </div>
     </footer>
   </body>
