create contact and portfolio page

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
           ><span class="nav-icon"></span
         ></label>
         <ul class="menu">
-          <li><a href="/Portfolio_Design/" style="color: #f5f5f5;">About Me</a></li>
+          <li><a href="/Portfolio_Design/" class="current-dir">About Me</a></li>
           <li><a href="/Portfolio_Design/pages/resume.html">Resume</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/Portfolio_Design/pages/portfolio.html">Portfolio</a></li>
+          <li><a href="/Portfolio_Design/pages/contact.html">Contact</a></li>
         </ul>
       </div>
     </header>
