--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,6 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
     <!--HEADER TAG-->
     <header>
@@ -34,20 +33,76 @@
         <ul class="menu">
           <li><a href="/Portfolio_Design/">About Me</a></li>
           <li>
+            <a href="/Portfolio_Design/pages/resume.html">Resume</a>
+          </li>
+          <li>
+            <a href="/Portfolio_Design/pages/portfolio.html">Portfolio</a>
+          </li>
+          <li>
             <a
-              href="/Portfolio_Design/pages/resume.html"
+              href="/Portfolio_Design/pages/contact.html"
               class="current-dir"
-              >Resume</a
+              >Contact</a
             >
           </li>
-          <li><a href="/Portfolio_Design/pages/portfolio.html">Portfolio</a></li>
-          <li><a href="/Portfolio_Design/pages/contact.html">Contact</a></li>
         </ul>
       </div>
     </header>
 
     <!--MAIN PAGE-->
-    <main></main>
+    <main class="contact-main">
+      <h1>Contact</h1>
+
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d3963.958105404037!2d3.375483066019477!3d6.526975608027348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x103b8dab0be5b19d%3A0x746b60c153b630db!2s4%20Asubiaro%20St%2C%20Igbobi%20100001%2C%20Lagos!3m2!1d6.526788!2d3.3757089999999996!5e0!3m2!1sen!2sng!4v1592272376560!5m2!1sen!2sng"
+        frameborder="0"
+        style="border: 1;"
+        allowfullscreen=""
+        aria-hidden="false"
+        tabindex="0"
+      ></iframe>
+
+      <div class="horiz-line"></div>
+
+      <div class="main-container contact-info">
+
+        <div class="card card-1 contact-phone">
+
+            <div class="card-image phone-icon">
+                <img src="../img/icons/icons8-android-24.png" alt="phone icon">
+            </div>
+
+            <div class="card-info">
+                <h4>+234 810 104 8751</h4>
+                <p>Contact me on this phone number if you have offers for me or if you have questions on what I do</p>
+            </div>
+        </div>
+
+        <div  class="card card-2 contact-location">
+
+            <div class="card-image location-icon">
+                <img src="../img/icons/icons8-marker-24.png" alt="location icon">
+            </div>
+
+            <div class="card-info">
+                <h4>Lagos, Nigeria</h4>
+                <p>Current based on the mainland of Lagos</p>
+            </div>
+        </div>
+
+        <div class="card card-4 contact-email">
+
+            <div class="card-image email-icon">
+                <img src="../img/icons/icons8-envelope-24.png" alt="email icon">
+            </div>
+
+            <div class="card-info">
+                <h4>seyi.juliana@gmail.com</h4>
+                <p>My personal email if accessing my number is impossible</p>
+            </div>
+        </div>
+      </div>
+    </main>
 
     <!--FOOTER TAG-->
     <footer>
