--- a/pages/resume.html
+++ b/pages/resume.html
@@ -34,12 +34,12 @@
           <li>
             <a
               href="/Portfolio_Design/pages/resume.html"
-              style="color: #f5f5f5;"
+              class="current-dir"
               >Resume</a
             >
           </li>
           <li><a href="/Portfolio_Design/pages/portfolio.html">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="/Portfolio_Design/pages/contact.html">Contact</a></li>
         </ul>
       </div>
     </header>
