--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             purely HTML and SASS. Enjoy!
           </p>
           <a href="/Portfolio_Design/pages/resume.html"><button class="resume-button">My Resume</button></a>
-          <button class="contact-button">Contact</button>
+          <a href="/Portfolio_Design/pages/contact.html"><button class="contact-button">Contact</button></a>
         </div>
       </div>
 
