finished the pages

--- a/index.html
+++ b/index.html
@@ -132,14 +132,15 @@
           <p class="text-white about-text px-md-5">
             Recent University graduate with a Computer Science degree. Fluent in
             HTML5, CSS, SASS and Bootstrap 4 and worked with React and Redux and
-            understand Git workflow. <br> 1+ years experience in Frontend
-            Development and a highly dedicated team player. Proficient in HTML,
-            CSS, SASS,Bootstrap 4 and I am conversant with React and Ruby on
-            Rails. Participated in more than one internship with different
-            companies. <br>Effective at working in fast-paced testing environment to
-            review software at each stage of development and production. Able to
-            check function, layout and operation for usability and visual design
-            issues. Familiar with working in Agile-driven environments.
+            understand Git workflow. <br />
+            1+ years experience in Frontend Development and a highly dedicated
+            team player. Proficient in HTML, CSS, SASS,Bootstrap 4 and I am
+            conversant with React and Ruby on Rails. Participated in more than
+            one internship with different companies. <br />Effective at working
+            in fast-paced testing environment to review software at each stage
+            of development and production. Able to check function, layout and
+            operation for usability and visual design issues. Familiar with
+            working in Agile-driven environments.
           </p>
         </div>
 
@@ -151,7 +152,7 @@
       <!--RESUME PAGE-->
       <div class="container px-4 py-4 mw-100" id="resume">
         <div class="text-center mb-4">
-          <h2>Experience</h2>
+          <h2 style="color: #232433;">Experience</h2>
           <div class="progress mx-auto" style="height: 4px; width: 150px;">
             <div
               class="progress-bar"
@@ -175,9 +176,11 @@
             </div>
             <div class="col-7 my-auto">
               <div class="resume-content">
-                <h5>Front end Developer Intern</h5>
-                <p class="company font-italic">HNG Internship</p>
-                <ul class="d-none d-md-block">
+                <h5 style="color: #232433;">Front end Developer Intern</h5>
+                <p class="company font-italic" style="color: #232433;">
+                  HNG Internship
+                </p>
+                <ul class="d-none d-md-block" style="color: #232433;">
                   <li>
                     Converted designs to code using Boostrap 4, HTML, CSS and
                     JavaScript
@@ -263,9 +266,11 @@
             </div>
             <div class="col-7 my-auto">
               <div class="resume-content">
-                <h5>Web Development Intern</h5>
-                <p class="company font-italic">DevCareer & Progate</p>
-                <ul class="d-none d-md-block">
+                <h5 style="color: #232433;">Web Development Intern</h5>
+                <p class="company font-italic" style="color: #232433;">
+                  DevCareer & Progate
+                </p>
+                <ul class="d-none d-md-block" style="color: #232433;">
                   <li>
                     Learnt how to use SASS and I used it in building this
                     portfolio
@@ -657,7 +662,7 @@
       <!--MY PORTFOLIO-->
       <div class="container px-4 py-5 mw-100 text-center" id="portfolio">
         <div class="main-title mb-4">
-          <h2>My Works</h2>
+          <h2 style="color: #232433;">My Works</h2>
           <div class="progress mx-auto" style="height: 4px; width: 150px;">
             <div
               class="progress-bar"
@@ -670,14 +675,174 @@
           </div>
         </div>
 
-        <div class="row px-4 py-4">
-          <div class="col-12">
-            <div class="card border-0">
-              <div class="card-body"></div>
+        <div class="text-center px-md-5">
+          <p class="px-md-5" style="color: #232433;">
+            Some of my recent works can be found here and the rest can be viewed
+            on GitHub
+          </p>
+        </div>
+
+        <div class="row px-4 py-4 px-md-5">
+          <div class="col-12 col-md-4 mb-md-4">
+            <div class="card">
+              <img
+                class="card-img-top w-100"
+                src="img/designportfolio.png"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title" style="color: #232433;">
+                  Envato Design Portfolio
+                </h5>
+                <p class="card-text" style="color: #232433;">
+                  Worked on this project based on a design during HNG internship
+                  stage 7. Animations from AOS library were used.
+                </p>
+                <a
+                  href="https://envato-2-0.netlify.app/"
+                  class="btn btn-primary"
+                  >Live Preview</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-4 mb-md-4">
+            <div class="card">
+              <img
+                class="card-img-top w-100"
+                src="img/certificate.PNG"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title" style="color: #232433;">
+                  HNGi8 Request Certificate page
+                </h5>
+                <p class="card-text" style="color: #232433;">
+                  Worked on this project based on a design during HNG internship
+                  stage 5. Animations from AOS library were used.
+                </p>
+                <a
+                  href="https://hngi8.netlify.app/pages/request-certificate.html"
+                  class="btn btn-primary"
+                  >Live Preview</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-4 mb-md-4">
+            <div class="card">
+              <img
+                class="card-img-top w-100"
+                src="img/about.PNG"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title" style="color: #232433;">
+                  HNGi8 About page
+                </h5>
+                <p class="card-text" style="color: #232433;">
+                  Worked on this project based on a design during HNG internship
+                  stage 5. Animations from AOS library were used.
+                </p>
+                <a
+                  href="https://hngi8.netlify.app/pages/about.html"
+                  class="btn btn-primary"
+                  >Live Preview</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-4 mb-md-4">
+            <div class="card">
+              <img
+                class="card-img-top w-100"
+                src="img/contact.PNG"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title">HNGi8 Contact page</h5>
+                <p class="card-text">
+                  Worked on this project based on a design during HNG internship
+                  stage 5. Animations from AOS library were used.
+                </p>
+                <a
+                  href="https://hngi8.netlify.app/pages/contact.html"
+                  class="btn btn-primary"
+                  >Live Preview</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-4 mb-md-4">
+            <div class="card">
+              <img
+                class="card-img-top w-100"
+                src="img/landing.PNG"
+                alt="Card image cap"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Landing page</h5>
+                <p class="card-text">
+                  Worked on this project based on a design during HNG internship
+                  stage 4. Animations from AOS library were used.
+                </p>
+                <a
+                  href="https://team-new-avengers.netlify.app/landing-page-21.html"
+                  class="btn btn-primary"
+                  >Live Preview</a
+                >
+              </div>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="container px-4 py-5 mw-100 text-center" id="contact">
+        <div class="main-title mb-4">
+          <h2 style="color: #232433;">Contact Me</h2>
+          <div class="progress mx-auto" style="height: 4px; width: 150px;">
+            <div
+              class="progress-bar"
+              role="progressbar"
+              style="width: 50%;"
+              aria-valuenow="50"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+        </div>
+
+        <div class="px-md-5 mb-4" style="width: 100%; height: 300px;">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3963.9595482516547!2d3.373520314266604!3d6.526793324937038!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8dab0be5b19d%3A0x746b60c153b630db!2s4%20Asubiaro%20St%2C%20Igbobi%20100001%2C%20Lagos!5e0!3m2!1sen!2sng!4v1595994680054!5m2!1sen!2sng"
+            frameborder="0"
+            style="border: 1px solid gray; width: 100%; height: 100%;"
+            allowfullscreen=""
+            aria-hidden="false"
+            tabindex="0"
+          ></iframe>
+        </div>
+
+        <div class="text-center">
+          <p>Want to get in touch about a project or a job?</p>
+          <p>
+            Feel free to contact me at
+            <a href="mailto:seyi.juliana@gmail.com">seyi.juliana@gmail.com</a>
+          </p>
+        </div>
+      </div>
+
+      <footer class="text-center pt-4 pb-2">
+        <p class="font-italic">
+          Created with love
+          <i class="fa fa-heart" aria-hidden="true"></i> &copy;Oluwaseyi
+          Awotunde
+        </p>
+      </footer>
     </div>
 
     <script src="./js/txtRotate.js"></script>
