--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
         </div>
 
         <div class="row px-4 py-4 px-md-5">
-          <div class="col-12 col-md-4 mb-md-4">
+          <div class="col-12 col-md-4 mb-4 px-5 px-md-0">
             <div class="card">
               <img
                 class="card-img-top w-100"
@@ -699,6 +699,7 @@
                   stage 7. Animations from AOS library were used.
                 </p>
                 <a
+                target="_blank"
                   href="https://envato-2-0.netlify.app/"
                   class="btn btn-primary"
                   >Live Preview</a
@@ -707,7 +708,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-md-4 mb-md-4">
+          <div class="col-12 col-md-4 mb-4 px-5 px-md-0">
             <div class="card">
               <img
                 class="card-img-top w-100"
@@ -723,6 +724,7 @@
                   stage 5. Animations from AOS library were used.
                 </p>
                 <a
+                target="_blank"
                   href="https://hngi8.netlify.app/pages/request-certificate.html"
                   class="btn btn-primary"
                   >Live Preview</a
@@ -731,7 +733,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-md-4 mb-md-4">
+          <div class="col-12 col-md-4 mb-4 px-5 px-md-0">
             <div class="card">
               <img
                 class="card-img-top w-100"
@@ -747,6 +749,7 @@
                   stage 5. Animations from AOS library were used.
                 </p>
                 <a
+                target="_blank"
                   href="https://hngi8.netlify.app/pages/about.html"
                   class="btn btn-primary"
                   >Live Preview</a
@@ -755,7 +758,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-md-4 mb-md-4">
+          <div class="col-12 col-md-4 mb-4 px-5 px-md-0">
             <div class="card">
               <img
                 class="card-img-top w-100"
@@ -769,6 +772,7 @@
                   stage 5. Animations from AOS library were used.
                 </p>
                 <a
+                target="_blank"
                   href="https://hngi8.netlify.app/pages/contact.html"
                   class="btn btn-primary"
                   >Live Preview</a
@@ -777,7 +781,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-md-4 mb-md-4">
+          <div class="col-12 col-md-4 mb-4 px-5 px-md-0">
             <div class="card">
               <img
                 class="card-img-top w-100"
@@ -791,6 +795,7 @@
                   stage 4. Animations from AOS library were used.
                 </p>
                 <a
+                target="_blank"
                   href="https://team-new-avengers.netlify.app/landing-page-21.html"
                   class="btn btn-primary"
                   >Live Preview</a
