--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     />
   </head>
 
-  <body>
-    <div class="container mw-100 p-0">
-      <nav class="navbar navbar-expand-lg header px-md-5">
+  <body data-spy="scroll" data-target=".navbar" data-offset="50">
+    <header class="mb-5">
+      <nav class="navbar navbar-expand-lg header position-fixed sticky-top py-0 px-md-5 w-100" style="z-index: 99;">
         <a href="/" class="navbar-brand"
           ><img src="./img/Free_Sample_By_Wix.jpg" alt="my-logo"
         /></a>
@@ -49,8 +49,8 @@
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav pl-4 ml-auto mr-5">
-            <li class="nav-item active py-2">
-              <a href="#" class="nav-link mr-4">Home</a>
+            <li class="nav-item py-2">
+              <a href="#home" class="nav-link mr-4">Home</a>
             </li>
             <li class="nav-item py-2">
               <a href="#about" class="nav-link mr-4">About Me</a>
@@ -67,54 +67,55 @@
           </ul>
         </div>
       </nav>
+    </header>
 
+    <main>
       <!--MAIN BODY-->
       <!--HOME PAGE-->
-      <div class="container mt-5 d-flex mb-5 text-center px-5">
-        <div class="row">
-          <div class="col-12 col-md-6 text-sm-center mb-4 text-md-left">
+      <div class="jumbotron jumbotron-fluid mb-0" id="home">
+        <div class="container text-center text-md-left d-md-flex px-md-3 mx-lg-auto">
+          <div class="col-12 col-md-6 text-center text-md-left">
             <img
               src="./img/IMG_20181226_165359_433.jpg"
               alt="my personal image"
-              class="img-fluid rounded-circle img-left"
+              class="img-fluid rounded-circle mt-5 mb-3 img-left"
             />
           </div>
-          <div class="col-12 col-md-6 text-sm-center my-md-auto">
-            <h4 class="font-italic">
-              <span
-                class="txt-rotate"
-                data-period="2000"
-                data-rotate='["Frontend Developer", "QA Tester", "Aspiring Full-stack Developer"]'
-              ></span>
-            </h4>
-            <h1>Oluwaseyi <span class="name">Awotunde</span></h1>
-            <p>
-              Welcome to my portfolio Website. Most of my works can be previewed
-              here but you can also see them on GitHub. This site was built with
-              purely HTML, CSS(SASS), Bootstrap 4 and JavaScript. Enjoy!
-            </p>
-            <div class="icons d-flex justify-content-center">
-              <a href="https://github.com/Shey1j" class="mr-4"
-                ><i class="fa fa-github-square" aria-hidden="true"></i
-              ></a>
-              <a href="https://twitter.com/SeyiJuliana" class="mr-4"
-                ><i class="fa fa-twitter-square" aria-hidden="true"></i
-              ></a>
-              <a href="https://www.facebook.com/awotunde.seyi.9" class="mr-4"
-                ><i class="fa fa-facebook-square" aria-hidden="true"></i
-              ></a>
-              <a
-                href="https://www.linkedin.com/in/oluwaseyi-awotunde-ba5690149/"
-                ><i class="fa fa-linkedin-square" aria-hidden="true"></i
-              ></a>
+            <div class="col-12 col-md-6 px-md-0 my-md-auto pl-lg-4">
+              <h4 class="font-italic">
+                <span
+                  class="txt-rotate"
+                  data-period="2000"
+                  data-rotate='["Frontend Developer", "QA Tester", "Aspiring Full-stack Developer"]'
+                ></span>
+              </h4>
+              <h1>Oluwaseyi <span class="name">Awotunde</span></h1>
+              <p>
+                Welcome to my portfolio Website. Most of my works can be previewed
+                here but you can also see them on GitHub. This site was built with
+                purely HTML, CSS(SASS), Bootstrap 4 and JavaScript. Enjoy!
+              </p>
+              <div class="icons d-flex justify-content-center">
+                <a href="https://github.com/Shey1j" class="mr-4"
+                  ><i class="fa fa-github-square" aria-hidden="true"></i
+                ></a>
+                <a href="https://twitter.com/SeyiJuliana" class="mr-4"
+                  ><i class="fa fa-twitter-square" aria-hidden="true"></i
+                ></a>
+                <a href="https://www.facebook.com/awotunde.seyi.9" class="mr-4"
+                  ><i class="fa fa-facebook-square" aria-hidden="true"></i
+                ></a>
+                <a
+                  href="https://www.linkedin.com/in/oluwaseyi-awotunde-ba5690149/"
+                  ><i class="fa fa-linkedin-square" aria-hidden="true"></i
+                ></a>
+              </div>
             </div>
-          </div>
         </div>
       </div>
-
       <!--ABOUT PAGE-->
       <div class="container mw-100 px-5 py-4 py-md-5 text-center" id="about">
-        <div class="main-title mb-4">
+        <div class="main-title mt-5 mb-4">
           <h2 class="text-white">About Me</h2>
           <div class="progress mx-auto" style="height: 4px; width: 150px;">
             <div
@@ -128,7 +129,7 @@
           </div>
         </div>
 
-        <div class="text-center px-md-5">
+        <div class="text-center px-md-5 mb-5">
           <p class="text-white about-text px-md-5">
             Recent University graduate with a Computer Science degree. Fluent in
             HTML5, CSS, SASS and Bootstrap 4 and worked with React and Redux and
@@ -143,15 +144,11 @@
             working in Agile-driven environments.
           </p>
         </div>
-
-        <!--
-        
-        -->
       </div>
 
       <!--RESUME PAGE-->
-      <div class="container px-4 py-4 mw-100" id="resume">
-        <div class="text-center mb-4">
+      <div class="container px-4 py-4 py-md-5 mw-100" id="resume">
+        <div class="text-center mt-5 mb-4">
           <h2 style="color: #232433;">Experience</h2>
           <div class="progress mx-auto" style="height: 4px; width: 150px;">
             <div
@@ -661,7 +658,7 @@
 
       <!--MY PORTFOLIO-->
       <div class="container px-4 py-5 mw-100 text-center" id="portfolio">
-        <div class="main-title mb-4">
+        <div class="main-title mt-5 mb-4">
           <h2 style="color: #232433;">My Works</h2>
           <div class="progress mx-auto" style="height: 4px; width: 150px;">
             <div
@@ -805,16 +802,16 @@
           </div>
         </div>
 
-        <a href="https://github.com/Shey1j"
-          class="see-more"
+        <a href="https://github.com/Shey1j" class="see-more"
           ><h5>
             SEE MORE
             <i class="fa fa-long-arrow-right" aria-hidden="true"></i></h5
         ></a>
       </div>
 
-      <div class="container px-4 py-5 mw-100 text-center" id="contact">
-        <div class="main-title mb-4">
+      <!--CONTACT ME-->
+      <div class="container px-md-4 py-5 mw-100 text-center" id="contact">
+        <div class="main-title mt-5 mb-4">
           <h2 style="color: #232433;">Contact Me</h2>
           <div class="progress mx-auto" style="height: 4px; width: 150px;">
             <div
@@ -836,10 +833,10 @@
           </p>
           <p>OR</p>
           <h5 class="mb-4">Get in touch</h5>
-          <div class="px-5 py-5 mx-5 border">
+          <div class="px-md-5 py-5 mx-md-5 border-0">
             <form
               action="MAILTO:seyi.juliana@gmail.com"
-              class="px-5"
+              class="px-md-5"
               method="POST"
               enctype="multipart/form-data"
             >
@@ -909,15 +906,14 @@
           </div>
         </div>
       </div>
+    </main>
 
-      <footer class="text-center pt-4 pb-2">
-        <p class="font-italic">
-          Created with love
-          <i class="fa fa-heart" aria-hidden="true"></i> &copy;Oluwaseyi
-          Awotunde
-        </p>
-      </footer>
-    </div>
+    <footer class="text-center pt-4 pb-2">
+      <p class="font-italic">
+        Created with love
+        <i class="fa fa-heart" aria-hidden="true"></i> &copy;Oluwaseyi Awotunde
+      </p>
+    </footer>
 
     <script src="./js/txtRotate.js"></script>
     <script
