corrected some typos and excess stuff

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <span
                 class="txt-rotate"
                 data-period="2000"
-                data-rotate='["Frontend Developer", "QA Tester", "Aspiring Full-stack Developer"]'
+                data-rotate='["Frontend Engineer", "QA Tester", "Aspiring Full-stack Engineer"]'
               ></span>
             </h4>
             <h1>Oluwaseyi <span class="name">Awotunde</span></h1>
@@ -173,7 +173,7 @@
           <div class="col-12 d-flex mb-3">
             <div class="col-3 mr-2">
               <p class="resume-date font-weight-bold text-secondary">
-                06-/2020-Present
+                06-/2020-08-2020
               </p>
             </div>
             <div class="col-7 my-auto">
@@ -263,14 +263,14 @@
           <div class="col-12 d-flex mb-3">
             <div class="col-3 mr-2">
               <p class="resume-date font-weight-bold text-secondary">
-                05/2020-Present
+                05/2020-08-2020
               </p>
             </div>
             <div class="col-7 my-auto">
               <div class="resume-content">
                 <h5 style="color: #232433;">Web Development Intern</h5>
                 <p class="company font-italic" style="color: #232433;">
-                  DevCareer & Progate
+                  DevCareer
                 </p>
                 <ul class="d-none d-md-block" style="color: #232433;">
                   <li>
@@ -326,17 +326,7 @@
                     </div>
                     <div class="modal-body">
                       <div class="d-flex mb-4">
-                        <div class="col-5">
-                          <img
-                            src="./img/progate.png"
-                            alt=""
-                            class="d-block w-100"
-                          />
-                        </div>
-                        <div class="col-2">
-                          <h2>&</h2>
-                        </div>
-                        <div class="col-5">
+                        <div class="col-12 px-5">
                           <img
                             src="./img/devlogo2.png"
                             alt=""
